--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_storage
 description: A simple persistent key value storage library for dart. Provide basic functionality for storing and retrieving data. Supports TTL and transactions.
-version: 1.1.2+2
+version: 1.2.0-pre.1
 repository: https://github.com/Mahmoud-Saeed-Mahmoud/simple_storage
 homepage: https://mahmoud-saeed-mahmoud.github.io/simple_storage
 
