✨ feat(pubspec.yaml): Expand Dart SDK version constraint
Expands the Dart SDK version constraint in the `pubspec.yaml` file to
support a wider range of Dart versions, from `>=3.0.0 <4.0.0`. This
change ensures the package can be used with a broader set of Dart
SDK versions, improving compatibility and flexibility.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ repository: https://github.com/Mahmoud-Saeed-Mahmoud/simple_storage
 homepage: https://mahmoud-saeed-mahmoud.github.io/simple_storage
 
 environment:
-  sdk: ^3.6.0
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   synchronized: ^3.3.0+3
