--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,15 +1,15 @@
 name: example
 description: "A simple example app for simple_storage"
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.6.0
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  path_provider : ^2.1.5
+  path_provider: ^2.1.5
   simple_storage:
     git:
       url: https://github.com/Mahmoud-Saeed-Mahmoud/simple_storage
