--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_storage
 description: A simple persistent key value storage library for dart. Provide basic functionality for storing and retrieving data. Supports TTL and transactions.
-version: 1.2.0
+version: 1.3.1
 repository: https://github.com/Mahmoud-Saeed-Mahmoud/simple_storage
 homepage: https://mahmoud-saeed-mahmoud.github.io/simple_storage
 
@@ -12,3 +12,5 @@ dependencies:
 
 dev_dependencies:
   lints: ^5.0.0
+  flutter_test:
+    sdk: flutter
